--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,16 @@
-APP_PORT=4567
+APP_PORT = 4567
 
-SLACK_SIGNING_SECRET=SLACK_SIGNING_SECRET
-SLACK_BOT_TOKEN=xoxb-SLACK_BOT_TOKEN
+SLACK_SIGNING_SECRET = SLACK_SIGNING_SECRET
+SLACK_BOT_TOKEN = xoxb-SLACK_BOT_TOKEN
 
-MONGODB_USER_NAME=MONGODB_USER_NAME
-MONGODB_USER_PASSWORD=MONGODB_USER_PASSWORD
-MONGODB_CLUSTER_URL=MONGODB_CLUSTER_URL
-MONGODB_NAME=MONGODB_NAME
+MONGODB_USER_NAME = MONGODB_USER_NAME
+MONGODB_USER_PASSWORD = MONGODB_USER_PASSWORD
+MONGODB_CLUSTER_URL = MONGODB_CLUSTER_URL
+MONGODB_NAME = MONGODB_NAME
 
 MAX_NUMBER_OF_SELECTED_USERS = 5
-MAX_NUMBER_OF_SELECTED_AWARDS = 3
+MAX_NUMBER_OF_SELECTED_AWARDS = 5
 LEADERBOARD_NUMBER_OF_USERS = 30
+
+UDROP_KEY1 = UDROP_KEY1
+UDROP_KEY2 = UDROP_KEY2
