--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@slack/bolt": "^2.5.0",
     "dotenv": "^8.2.0",
+    "form-data": "^3.0.0",
     "got": "^11.8.1",
     "mongodb": "^3.6.3",
-    "node-html-to-image": "^3.1.0"
+    "node-html-to-image": "^3.1.0",
+    "uuid": "^8.3.2"
   }
 }
