Adding winston logger. Refactoring code

--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,5 @@ LEADERBOARD_NUMBER_OF_USERS = 30
 
 UDROP_KEY1 = UDROP_KEY1
 UDROP_KEY2 = UDROP_KEY2
+
+CONTRIBUTE_EMAIL_ADDR = CONTRIBUTE_EMAIL_ADDR
