--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@slack/bolt": "^2.5.0",
+    "@slack/bolt": "^2.6.1",
     "dotenv": "^8.2.0",
     "form-data": "^3.0.0",
     "got": "^11.8.1",
     "mongodb": "^3.6.3",
     "node-html-to-image": "^3.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   }
 }
