--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "karrotbot",
+  "name": "karrotawards",
+  "engines": {
+    "node": "14.15.3"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Maxim Zhernovkov",
   "license": "ISC",
   "dependencies": {
     "@slack/bolt": "^2.6.1",
@@ -15,7 +18,6 @@
     "got": "^11.8.1",
     "mongodb": "^3.6.3",
     "node-html-to-image": "^3.1.0",
-    "uuid": "^8.3.2",
-    "winston": "^3.3.3"
+    "uuid": "^8.3.2"
   }
 }
