Adding delayed intervals to show working on it message

--- a/.env.template
+++ b/.env.template
@@ -16,3 +16,4 @@ UDROP_KEY1 = UDROP_KEY1
 UDROP_KEY2 = UDROP_KEY2
 
 CONTRIBUTE_EMAIL_ADDR = CONTRIBUTE_EMAIL_ADDR
+WORK_NOTIFICATION_TIMEOUT_INTERVAL_MILLISECONDS = 1000
