Adding more logging to better see how users interact with the app. Also added limit for the award message

--- a/.env.template
+++ b/.env.template
@@ -10,6 +10,7 @@ MONGODB_NAME = MONGODB_NAME
 
 MAX_NUMBER_OF_SELECTED_USERS = 5
 MAX_NUMBER_OF_SELECTED_AWARDS = 5
+AWARD_MESSAGE_MAX_CHARACTER_NUMBER = 200
 LEADERBOARD_DEFAULT_NUMBER_OF_USERS = 10
 LEADERBOARD_MAX_NUMBER_OF_USERS = 30
 
